--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
         "@angular/platform-browser": "~14.1.1",
         "@angular/platform-browser-dynamic": "~14.1.1",
         "@angular/router": "~14.1.1",
+        "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+        "@popperjs/core": "^2.11.6",
+        "bootstrap": "^5.2.1",
         "jest-environment-jsdom": "^28.1.3",
         "rxjs": "~7.5.6",
         "tslib": "^2.4.0",
@@ -42,6 +45,7 @@
         "@angular-eslint/template-parser": "14.0.2",
         "@angular/cli": "~14.1.1",
         "@angular/compiler-cli": "~14.1.1",
+        "@angular/localize": "^14.1.1",
         "@nrwl/cypress": "^14.5.4",
         "@nrwl/workspace": "^14.5.4",
         "@types/jest": "^28.1.6",
