--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "ng serve --disable-host-check",
         "build": "ng build",
         "build:prod": "ng build --configuration production",
         "build:ci": "ng build --configuration production --source-map=false",
@@ -25,9 +25,13 @@
         "@angular/compiler": "~14.1.1",
         "@angular/core": "~14.1.1",
         "@angular/forms": "~14.1.1",
+        "@angular/google-maps": "^14.2.1",
         "@angular/platform-browser": "~14.1.1",
         "@angular/platform-browser-dynamic": "~14.1.1",
         "@angular/router": "~14.1.1",
+        "@ng-web-apis/common": "^2.0.1",
+        "@ng-web-apis/geolocation": "^2.0.0",
+        "@types/google.maps": "^3.50.0",
         "jest-environment-jsdom": "^28.1.3",
         "rxjs": "~7.5.6",
         "tslib": "^2.4.0",
