--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "~14.2.1",
     "@angular/platform-browser-dynamic": "~14.2.1",
     "@angular/router": "~14.2.1",
+    "@angular/service-worker": "~14.2.1",
         "@ng-web-apis/common": "^2.0.1",
         "@ng-web-apis/geolocation": "^2.0.0",
         "@types/google.maps": "^3.50.0",
