--- a/package.json
+++ b/package.json
@@ -25,16 +25,18 @@
     "@angular/compiler": "~14.2.1",
     "@angular/core": "~14.2.1",
     "@angular/forms": "~14.2.1",
-        "@angular/google-maps": "^14.2.1",
+    "@angular/google-maps": "^14.2.1",
     "@angular/platform-browser": "~14.2.1",
     "@angular/platform-browser-dynamic": "~14.2.1",
     "@angular/router": "~14.2.1",
-        "@ng-web-apis/common": "^2.0.1",
-        "@ng-web-apis/geolocation": "^2.0.0",
-        "@types/google.maps": "^3.50.0",
-        "@ng-bootstrap/ng-bootstrap": "^13.0.0",
-        "@popperjs/core": "^2.11.6",
-        "bootstrap": "^5.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@ng-web-apis/common": "^2.0.1",
+    "@ng-web-apis/geolocation": "^2.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "@popperjs/core": "^2.11.6",
+    "@types/google.maps": "^3.50.0",
+    "bootstrap": "^5.2.1",
     "jest-environment-jsdom": "^28.1.3",
     "rxjs": "~7.5.6",
     "tslib": "^2.4.0",
@@ -49,7 +51,7 @@
     "@angular-eslint/template-parser": "14.0.4",
     "@angular/cli": "~14.2.2",
     "@angular/compiler-cli": "~14.2.1",
-        "@angular/localize": "^14.1.1",
+    "@angular/localize": "^14.1.1",
     "@nrwl/cypress": "^14.6.5",
     "@nrwl/workspace": "^14.5.4",
     "@types/jest": "^28.1.6",
