--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,10 @@
                           "src/manifest.webmanifest"
                         ],
                         "styles": [
-                            "src/styles/styles.scss"
+                            "src/styles/styles.scss",
+                            "@fortawesome/fontawesome-free/css/fontawesome.css",
+                            "@fortawesome/fontawesome-free/css/brands.css",
+                            "@fortawesome/fontawesome-free/css/solid.css"
                         ],
                         "scripts": [],
                         "vendorChunk": true,
